--- a/simple_image_viewer.html
+++ b/simple_image_viewer.html
@@ -182,17 +182,17 @@
 
         set_keydown_event_to_window: function() {
           window.addEventListener("keydown", function(event) {
-            // event.key           [Chrome, Firefox, MS-IE11, MS-Edge25]
+            // event.key           [Chrome, Firefox, Opera, MS-IE11, MS-Edge25]
             // event.keyIdentifier [Safari] (.keyIdentifier method is deprecated. However, .key method is not supported in Safari.)
             var received_key  = event.key || event.keyIdentifier;
 
             switch (received_key) {
-              case "Enter":     // [Chrome, Firefox, Safari, MS-IE11, MS-Edge25]
-              case "ArrowRight":// [Chrome, Firefox]
+              case "Enter":     // [Chrome, Firefox, Safari, Opera, MS-IE11, MS-Edge25]
+              case "ArrowRight":// [Chrome, Firefox, Opera]
               case "Right":     // [Safari, MS-IE11, MS-Edge25]
                 Page.transition_next_page(event);
                 break;
-              case "ArrowLeft": // [Chrome, Firefox]
+              case "ArrowLeft": // [Chrome, Firefox, Opera]
               case "Left":      // [Safari, MS-IE11, MS-Edge25]
                 Page.transition_previous_page(event);
                 break;
